# IceNetOGCAPI

./: .gitignore  Makefile  README.md  make_config.sh  make_package.sh  pyproject.toml  requirements.txt  setup_terraform.py
examples/: api-usage-historic-forecasts.ipynb  api-usage-latest-forecasts.ipynb  api-usage.ipynb
icenetgeoapi/: icenet_views.py  post_build.sh  pygeoapi.mustache.yml  pygeoapi.patch  requirements.txt  run.py
terraform/: backend.tf  main.tf  variables.tf
terraform/common/: outputs.tf
terraform/pygeoapi/: app.tf  deploy.tf  variables.tf
