[tool.poetry]
name = "icenetgeoapi"
version = "0.1.0"
description = "OGC-compatible API for exposing IceNet predictions."
authors = ["James Robinson <jrobinson@turing.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
azure-identity = "^1.6.0"
azure-mgmt-resource = "^19.0.0"
azure-mgmt-storage = "^18.0.0"
coloredlogs = "^15.0.1"
pyhcl = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
